--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,10 @@
 body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #4A4A4A;
+  width: 100%;
+  height: 100%;
+}
+
+div {
+  box-sizing: border-box;
 }
