--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
   color: #4A4A4A;
   width: 100%;
   height: 100%;
