Style and cache stories

--- a/client/src/components/epic/epic.css
+++ b/client/src/components/epic/epic.css
@@ -1,5 +1,13 @@
 .epic {
-  flex: 1 0 0;
-  padding: 4px;
-  border-right: 1px solid #4A4A4A;
+  padding: 4px 8px;
+  /*border-radius: 3px;*/
+  flex: 1 0 200px;
 }
+
+.epic:nth-child(even) {
+  background-color: #efefef;
+  background-color: #E8E9F3;
+
+  box-shadow: 0 -1px 1px rgba(0,0,0,.4) inset;
+}
+
