--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
 body {
-  font-family: 'Open Sans',Helvetica,Arial,sans-serif;
-  color: #4A4A4A;
+  font-family: "Changa", Helvetica, Arial, sans-serif;
+  color: #272635;
   width: 100%;
   height: 100%;
   line-height: 1.4rem;
@@ -8,4 +8,18 @@ body {
 
 div {
   box-sizing: border-box;
+}
+
+a {
+  color: #272635;
+  text-decoration: none;
+
+}
+
+a:hover {
+  color: #B1E5F2;
+    /*color: #E8E9F3;*/
+    /*color: #CECECE;*/
+    /*color: #A6A6A8;*/
+    /*color: #272635;*/
 }
