--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,11 @@
+html, body {
+  height: 100%;
+}
+
 body {
   font-family: "Changa", Helvetica, Arial, sans-serif;
   color: #272635;
   width: 100%;
-  height: 100%;
   line-height: 1.4rem;
 }
 
