--- a/client/src/components/milestone-page/milestone-page.css
+++ b/client/src/components/milestone-page/milestone-page.css
@@ -4,3 +4,8 @@
   width: 100%;
   padding: 10px 5px 0 5px;
 }
+
+.page header {
+  height: 44px;
+  border-bottom: 1px solid rgba(39, 38, 53, 0.4);
+}
