--- a/client/src/components/epic-header/epic-header.css
+++ b/client/src/components/epic-header/epic-header.css
@@ -9,10 +9,28 @@
   line-height: 1.5rem;
   margin: 0;
   min-height: 72px; /*3 lines*/
+  position: relative;
 }
 
-.name .icon {
+.titleIcon {
+  font-size: 0.9rem;
+  opacity: 0.8;
+
+  /*position: absolute;*/
+  /*top: 0;*/
+  /*right: 0;*/
+}
+
+.name .icon-check {
   color: #13ae47;
+}
+
+.icon-paper-plane {
+  opacity: 0.6;
+}
+
+.icon-sticky-note {
+  color: #c9a61d;
 }
 
 .epicStats {
