--- a/client/src/components/story/story.css
+++ b/client/src/components/story/story.css
@@ -17,6 +17,16 @@
   /*align-items: flex-end;*/
 
   flex-direction: column;
+
+}
+
+.canDrag {
+  cursor: grab;
+}
+
+.isDragging {
+  opacity: 0.3;
+  cursor: grabbing;
 }
 
 .story footer {
